--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+appnope==0.1.3
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 asttokens==2.0.5
@@ -58,12 +59,14 @@ pandas==1.4.2
 pandocfilters==1.5.0
 parso==0.8.3
 pbr==5.9.0
+pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.1.1
 ply==3.11
 prometheus-client==0.14.1
 prompt-toolkit==3.0.29
 psutil==5.9.1
+ptyprocess==0.7.0
 pure-eval==0.2.2
 pycparser==2.21
 pydot==1.4.2
@@ -75,12 +78,12 @@ python-constraint==1.4.0
 python-dateutil==2.8.2
 pytz==2022.1
 pyzmq==23.2.0
-qiskit==0.36.2
+qiskit==0.37.2
 qiskit-aer==0.10.4
 qiskit-aqua==0.9.5
-qiskit-ibmq-provider==0.19.1
+qiskit-ibmq-provider==0.19.2
 qiskit-ignis==0.7.1
-qiskit-terra==0.20.2
+qiskit-terra==0.21.2
 Quandl==3.7.0
 requests==2.28.0
 requests-ntlm==1.1.0
@@ -93,6 +96,7 @@ six==1.16.0
 soupsieve==2.3.2.post1
 stack-data==0.3.0
 stevedore==3.5.0
+symengine==0.9.2
 sympy==1.10.1
 terminado==0.15.0
 threadpoolctl==3.1.0
