--- a/requirements.txt
+++ b/requirements.txt
@@ -85,6 +85,7 @@ qiskit-ibmq-provider==0.19.2
 qiskit-ignis==0.7.1
 qiskit-terra==0.21.2
 Quandl==3.7.0
+qubovert
 requests==2.28.0
 requests-ntlm==1.1.0
 retworkx==0.11.0
