--- a/requirements.txt
+++ b/requirements.txt
@@ -1,115 +1,116 @@
+anyio==3.6.2
 appnope==0.1.3
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
-asttokens==2.0.5
-attrs==21.4.0
+asttokens==2.1.0
+attrs==22.1.0
 backcall==0.2.0
 beautifulsoup4==4.11.1
-bleach==5.0.0
-certifi==2022.5.18.1
-cffi==1.15.0
-charset-normalizer==2.0.12
-colorama==0.4.5
-cryptography==37.0.2
+bleach==5.0.1
+cffi==1.15.1
+charset-normalizer==2.1.1
+contourpy==1.0.6
+cryptography==38.0.3
 cycler==0.11.0
-debugpy==1.6.0
+debugpy==1.6.3
 decorator==5.1.1
 defusedxml==0.7.1
-dill==0.3.5.1
-dlx==1.0.4
-docplex==2.23.222
+Deprecated==1.2.13
+dill==0.3.6
+dimod==0.12.1
+dwave-neal==0.5.9
 entrypoints==0.4
-executing==0.8.3
-fastdtw==0.3.4
-fastjsonschema==2.15.3
-fonttools==4.33.3
-h5py==3.2.1
-idna==3.3
-inflection==0.5.1
-ipykernel==6.15.0
-ipython==8.4.0
+executing==1.2.0
+fastjsonschema==2.16.2
+fonttools==4.38.0
+idna==3.4
+importlib-metadata==5.0.0
+ipykernel==6.17.1
+ipython==8.6.0
 ipython-genutils==0.2.0
-ipywidgets==7.7.0
+ipywidgets==8.0.2
 jedi==0.18.1
 Jinja2==3.1.2
-joblib==1.1.0
-jsonschema==4.6.0
-jupyter-client==7.3.4
-jupyter-core==4.10.0
+jsonschema==4.17.0
+jupyter==1.0.0
+jupyter-console==6.4.4
+jupyter-server==1.23.2
+jupyter_client==7.4.5
+jupyter_core==5.0.0
 jupyterlab-pygments==0.2.2
-jupyterlab-widgets==1.1.0
-kiwisolver==1.4.3
-lxml==4.9.0
+jupyterlab-widgets==3.0.3
+kiwisolver==1.4.4
 MarkupSafe==2.1.1
-matplotlib==3.5.2
-matplotlib-inline==0.1.3
-mistune==0.8.4
-more-itertools==8.13.0
+matplotlib==3.6.2
+matplotlib-inline==0.1.6
+mistune==2.0.4
 mpmath==1.2.1
-multitasking==0.0.10
-nbclient==0.6.4
-nbconvert==6.5.0
-nbformat==5.4.0
-nest-asyncio==1.5.5
-notebook==6.4.12
+nbclassic==0.4.8
+nbclient==0.7.0
+nbconvert==7.2.5
+nbformat==5.7.0
+nest-asyncio==1.5.6
+notebook==6.5.2
+notebook_shim==0.2.2
 ntlm-auth==1.5.0
-numpy==1.22.4
+numpy==1.23.4
 packaging==21.3
-pandas==1.4.2
+pandas==1.5.1
 pandocfilters==1.5.0
 parso==0.8.3
-pbr==5.9.0
+pbr==5.11.0
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==9.1.1
+Pillow==9.3.0
+platformdirs==2.5.4
 ply==3.11
-prometheus-client==0.14.1
-prompt-toolkit==3.0.29
-psutil==5.9.1
+prometheus-client==0.15.0
+prompt-toolkit==3.0.32
+psutil==5.9.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycparser==2.21
 pydot==1.4.2
-Pygments==2.12.0
+Pygments==2.13.0
 pylatexenc==2.10
 pyparsing==3.0.9
-pyrsistent==0.18.1
-python-constraint==1.4.0
+pyqubo==1.3.1
+pyrsistent==0.19.2
 python-dateutil==2.8.2
-pytz==2022.1
-pyzmq==23.2.0
-qiskit==0.37.2
-qiskit-aer==0.10.4
-qiskit-aqua==0.9.5
+pytz==2022.6
+pyzmq==24.0.1
+qiskit==0.39.2
+qiskit-aer==0.11.1
 qiskit-ibmq-provider==0.19.2
-qiskit-ignis==0.7.1
-qiskit-terra==0.21.2
-Quandl==3.7.0
-qubovert
-requests==2.28.0
+qiskit-terra==0.22.2
+qtconsole==5.4.0
+QtPy==2.3.0
+qubovert==1.2.5
+requests==2.28.1
 requests-ntlm==1.1.0
-retworkx==0.11.0
-scikit-learn==1.1.1
-scipy==1.8.1
-seaborn==0.11.2
+retworkx==0.12.0
+rustworkx==0.12.0
+scipy==1.9.3
+seaborn==0.12.1
 Send2Trash==1.8.0
 six==1.16.0
+sniffio==1.3.0
 soupsieve==2.3.2.post1
-stack-data==0.3.0
-stevedore==3.5.0
+stack-data==0.6.1
+stevedore==4.1.1
 symengine==0.9.2
-sympy==1.10.1
-terminado==0.15.0
-threadpoolctl==3.1.0
-tinycss2==1.1.1
-tornado==6.1
-traitlets==5.3.0
+sympy==1.11.1
+terminado==0.17.0
+tinycss2==1.2.1
+tornado==6.2
+traitlets==5.5.0
 tweedledum==1.1.1
-urllib3==1.26.9
+urllib3==1.26.12
 wcwidth==0.2.5
 webencodings==0.5.1
-websocket-client==1.3.3
-websockets==10.3
-widgetsnbextension==3.6.0
-wincertstore==0.2
-yfinance==0.1.72
+websocket-client==1.4.2
+websockets==10.4
+widgetsnbextension==4.0.3
+wrapt==1.14.1
+xmltodict==0.13.0
+zipp==3.10.0
